# project_x

backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/routes/: __root.tsx
